--- a/index.html
+++ b/index.html
@@ -409,10 +409,74 @@
                     </div>
                 </div>
                 <br>
+                <div class="accordion-container2">
+                    <div class="ac">
+                      <h2 class="ac-header">
+                        <button type="button" class="ac-trigger"><i class="fa-solid fa-arrow-trend-up" style="color: #ffffff;"></i>  Front-end Projects</button>
+                      </h2>
+                      <div class="ac-panel">
+                        <p class="ac-text">
+                            <h3>Finished Front-End Projects</h3>
+                            <br>
+                            <swiper-container class="mySwiper" pagination="true" space-between="30"
+                            centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
+                            <swiper-slide> <img src="project/Project1.jpg" alt="">  </swiper-slide>
+                            <swiper-slide><img src="project/Project2.jpg" alt=""></swiper-slide>
+                            <swiper-slide><img src="project/Project3.jpg" alt=""></swiper-slide>
+                          </swiper-container>
+                          <br>
+                          This is my responsive Tourist Spots front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong>and
+                          <strong>HTML</strong>
+                          <br>
+                          <br>
+                          <a href="https://dhemz21.github.io/KaliGuide/" target="_blank">View Website</a>
+                          <hr>
+                          <swiper-container class="mySwiper" pagination="true" space-between="30"
+                          centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
+                          <swiper-slide> <img src="project/Project4.jpg" alt="">  </swiper-slide>
+                          <swiper-slide><img src="project/Project5.jpg" alt=""></swiper-slide>
+                          <swiper-slide><img src="project/Project6.jpg" alt=""></swiper-slide>
+                          <swiper-slide><img src="project/Project7.jpg" alt=""></swiper-slide>
+                          <swiper-slide><img src="project/Project8.jpg" alt=""></swiper-slide>
+                          <swiper-slide><img src="project/Project9.jpg" alt=""></swiper-slide>
+
+                        </swiper-container>
+                        <br>
+                        This my cloned resposive NetFlix front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong> and
+                        <strong>HTML</strong>
+                        <br>
+                        <br>
+                        <a href="https://dhemz21.github.io/Netflix/" target="_blank">View Website</a>
+                        <br>
+                        <br>
+                        <h3>Unfinished Front-end Website</h3>
+                        <hr>
+                        <swiper-container class="mySwiper" pagination="true" space-between="30"
+                        centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
+                        <swiper-slide> <img src="project/Project4.jpg" alt="">  </swiper-slide>
+                        <swiper-slide><img src="project/Project5.jpg" alt=""></swiper-slide>
+                        <swiper-slide><img src="project/Project6.jpg" alt=""></swiper-slide>
+                        <swiper-slide><img src="project/Project7.jpg" alt=""></swiper-slide>
+                        <swiper-slide><img src="project/Project8.jpg" alt=""></swiper-slide>
+                        <swiper-slide><img src="project/Project9.jpg" alt=""></swiper-slide>
+
+                      </swiper-container>
+                      <br>
+                      This my cloned resposive NetFlix front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong> and
+                      <strong>HTML</strong>
+                      <br>
+                      <br>
+                      <a href="https://dhemz21.github.io/Netflix/" target="_blank">View Website</a>
+                      <hr>
+                        </p>
+                      </div>
+                    </div>
+                       
+                  </div>
+                <br>
                 <hr class="section2__hr">
             </div>
     </section>
-
     <footer class="main__footer">
         <div class="footer container">
             <div class="footer__contact">
@@ -426,11 +490,11 @@
             </div>
         </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="src/js/hamburger.js"></script>
     <script src="src/js/srollEvent.js"></script>
     <script src="src/js/accordion.js"></script>
+    <script src="src/js/accordion2.js"></script>
     <script src="src/js/swiper.js"></script>
     <script src="src/js/swiper2.js"></script>
 </body>
