--- a/index.html
+++ b/index.html
@@ -412,62 +412,74 @@
                 <div class="accordion-container2">
                     <div class="ac">
                       <h2 class="ac-header">
-                        <button type="button" class="ac-trigger"><i class="fa-solid fa-arrow-trend-up" style="color: #ffffff;"></i>  Front-end Projects</button>
+                        <button type="button" class="ac-trigger"><i class="fa-solid fa-laptop" style="color: #ffffff;"></i> Front-end Projects</button>
                       </h2>
                       <div class="ac-panel">
                         <p class="ac-text">
-                            <h3>Finished Front-End Projects</h3>
+                            <h3 class="website__title"><i class="fa-solid fa-wrench" style="color: #ffffff;"></i> Finished Front-End Website</h3>
                             <br>
                             <swiper-container class="mySwiper" pagination="true" space-between="30"
                             centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
-                            <swiper-slide> <img src="project/Project1.jpg" alt="">  </swiper-slide>
-                            <swiper-slide><img src="project/Project2.jpg" alt=""></swiper-slide>
-                            <swiper-slide><img src="project/Project3.jpg" alt=""></swiper-slide>
+                            <swiper-slide> <img src="project/Project1.jpg" alt="website-image"></swiper-slide>
+                            <swiper-slide><img src="project/Project2.jpg" alt="website-image"></swiper-slide>
+                            <swiper-slide><img src="project/Project3.jpg" alt="website-image"></swiper-slide>
                           </swiper-container>
                           <br>
-                          This is my responsive Tourist Spots front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong>and
-                          <strong>HTML</strong>
+                          <span class="website__span__description">
+                            This is my responsive Tourist Spots website this project, used <strong>Vanilla Css</strong>, <strong> Media Query</strong> and
+                          <strong> HTML</strong>
+                          </span>
                           <br>
-                          <br>
-                          <a href="https://dhemz21.github.io/KaliGuide/" target="_blank">View Website</a>
+                          <p class="view__website"><a class="view__website" href="https://dhemz21.github.io/KaliGuide/" target="_blank"><i class="fa-solid fa-eye" style="color: #ffffff;"></i> View <b>KaliGuide</b></a></p>
                           <hr>
                           <swiper-container class="mySwiper" pagination="true" space-between="30"
                           centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
-                          <swiper-slide> <img src="project/Project4.jpg" alt="">  </swiper-slide>
-                          <swiper-slide><img src="project/Project5.jpg" alt=""></swiper-slide>
-                          <swiper-slide><img src="project/Project6.jpg" alt=""></swiper-slide>
-                          <swiper-slide><img src="project/Project7.jpg" alt=""></swiper-slide>
-                          <swiper-slide><img src="project/Project8.jpg" alt=""></swiper-slide>
-                          <swiper-slide><img src="project/Project9.jpg" alt=""></swiper-slide>
+                          <swiper-slide> <img src="project/Project4.jpg" alt="website-image"></swiper-slide>
+                          <swiper-slide><img src="project/Project5.jpg" alt="website-image"></swiper-slide>
+                          <swiper-slide><img src="project/Project6.jpg" alt="website-image"></swiper-slide>
+                          <swiper-slide><img src="project/Project7.jpg" alt="website-image"></swiper-slide>
+                          <swiper-slide><img src="project/Project8.jpg" alt="website-image"></swiper-slide>
+                          <swiper-slide><img src="project/Project9.jpg" alt="website-image"></swiper-slide>
 
                         </swiper-container>
                         <br>
-                        This my cloned resposive NetFlix front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong> and
-                        <strong>HTML</strong>
+                        <span class="website__span__description">
+                            This my cloned responsive NetFlix website, this project used <strong>Vanilla Css</strong>, <strong> Media Query</strong> and
+                        <strong> HTML</strong>
+                        </span>
                         <br>
-                        <br>
-                        <a href="https://dhemz21.github.io/Netflix/" target="_blank">View Website</a>
-                        <br>
-                        <br>
-                        <h3>Unfinished Front-end Website</h3>
+                        <p class="view__website"><a href="https://dhemz21.github.io/Netflix/" target="_blank"><i class="fa-solid fa-eye" style="color: #ffffff;"></i> View <b>NetFlix</b></a></p>
                         <hr>
+                        <br>
+                        <h3 class="website__title"><i class="fa-solid fa-hammer" style="color: #ffffff;"></i> Unfinished Front-end Website</h3>
+                        <br>
                         <swiper-container class="mySwiper" pagination="true" space-between="30"
                         centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
-                        <swiper-slide> <img src="project/Project4.jpg" alt="">  </swiper-slide>
-                        <swiper-slide><img src="project/Project5.jpg" alt=""></swiper-slide>
-                        <swiper-slide><img src="project/Project6.jpg" alt=""></swiper-slide>
-                        <swiper-slide><img src="project/Project7.jpg" alt=""></swiper-slide>
-                        <swiper-slide><img src="project/Project8.jpg" alt=""></swiper-slide>
-                        <swiper-slide><img src="project/Project9.jpg" alt=""></swiper-slide>
-
+                        <swiper-slide><img src="project/Unfinished__projects/Project6.jpg" alt="website-image"></swiper-slide>
+                        <swiper-slide><img src="project/Unfinished__projects/Project5.jpg" alt="website-image"></swiper-slide>
+                        <swiper-slide><img src="project/Unfinished__projects/Project4.jpg" alt="website-image"></swiper-slide>
                       </swiper-container>
-                      <br>
-                      This my cloned resposive NetFlix front-end website this project, used only <strong>Vanilla Css</strong>, <strong>Media Query</strong> and
-                      <strong>HTML</strong>
-                      <br>
-                      <br>
-                      <a href="https://dhemz21.github.io/Netflix/" target="_blank">View Website</a>
-                      <hr>
+                        <br>
+                        <span class="website__span__description">
+                            My unfinished project <strong>TechShop</strong> this is a responsive website, and used <strong>Vanilla Css</strong>,<strong> Media Query</strong> and <strong> HTML</strong>
+                        </span>
+                        <br>
+                        <p class="view__website"><a href="https://dhemz21.github.io/Techshop/" target="_blank"><i class="fa-solid fa-eye" style="color: #ffffff;"></i> View <b>TechShop</b></a></p>
+                        <br>
+                        <hr>
+                        <span class="website__span__description">
+                            My unfinished project <strong>WildPage</strong> this is a responsive website, and used <strong>Bootstrap</strong> and <strong> HTML</strong>
+                        </span>
+                        <br>
+                        <p class="view__website"><a href="https://dhemz21.github.io/WildPage/" target="_blank"><i class="fa-solid fa-eye" style="color: #ffffff;"></i> View <b>WildPage</b></a></p>
+                        <br>
+                        <hr>
+                        <span class="website__span__description">
+                            My unfinished project <strong>Flexbox</strong> this is a responsive website, and used <strong>Vanilla Css</strong> and <strong> HTML</strong>
+                        </span>
+                        <br>
+                        <p class="view__website"><a href="https://dhemz21.github.io/Flexbox-Website/" target="_blank"><i class="fa-solid fa-eye" style="color: #ffffff;"></i> View <b>Flexbox</b></a></p>
+                        <hr>
                         </p>
                       </div>
                     </div>
