Updated profile section and social links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="icons/rocket-svgrepo-com.svg">
     <title>Portfolio</title>
     <!-- Custom Css -->
     <link rel="stylesheet" href="src/css/modern-normalize.css">
@@ -74,7 +75,7 @@
     <section class="main__page">
         <div class="section container">
             <div class="section__profile">
-                <img src="img/dhemz_profile.jpg" alt="">
+                <img src="img/dhemz_profile.jpg" alt="profile">
                 <h1 class="section__name">Dhemler Omapas</h1>
                 <hr>
                 <p class="section__job">
