--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
             <div class="cards">
                 <div class="card card1">
-                    <img src="img/Service_1.jpg" alt="Web Development image">
+                    <img src="img/Test.png" alt="Web Development image">
                     <hr>
                     <div class="card-content">
                         <h3>"Web Development"</h3>
